@@ -1,5 +1,9 @@
 #!/bin/csh 
-# CSH Setup script for Unix (ONLY REQUIRED WHEN USING DEBUGGER)
+#
+# C-Shell setup script (ONLY REQUIRED FOR DEBUGGING!)
+# This version is of for "ext"-based installs.
+#
+# "source" this file before trying to use a debugger with PyMOL
 #
 # ==============================================================
 # Set PYMOL_PATH to point at the correct location on your system
@@ -25,9 +29,12 @@ endif
 # python modules
 #
 if ( $?PYTHONPATH ) then
-setenv PYTHONPATH ${PYMOL_PATH}/modules:${PYMOL_EXTLIBPATH}/python2.1:${PYTHONPATH}
+setenv PYTHONPATH ${PYMOL_PATH}/modules:${PYMOL_EXTLIBPATH}/python2.2:${PYTHONPATH}
 else
-setenv PYTHONPATH ${PYMOL_PATH}/modules:${PYMOL_EXTLIBPATH}/python2.1
+setenv PYTHONPATH ${PYMOL_PATH}/modules:${PYMOL_EXTLIBPATH}/python2.2
 endif
+#
+# Now the user can "gdb python" or "dbx python" and then
+# "run modules/pymol/__init__.py"
 #
 
